--- a/src/components/Hero/hero.scss
+++ b/src/components/Hero/hero.scss
@@ -6,4 +6,48 @@
       font-size: var(--fs-h1);
     }
   }
+
+  &__skills {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(6, 10.5rem);
+    gap: 1rem;
+  }
+}
+
+.graphD {
+  grid-column: 1/3;
+  grid-row: 1/3;
+}
+
+.illur {
+  grid-row: 4/5;
+  grid-column: 1/3;
+}
+
+.photo {
+  grid-column: 1/3;
+}
+
+.motionG {
+  grid-column: 1/3;
+}
+
+.skill {
+  color: var(--color-cream);
+  position: relative;
+  border-radius: 0.5rem;
+
+  &__svg-container {
+    position: absolute;
+    top: 1rem;
+    right: 1.3rem;
+  }
+
+  & h3 {
+    font-size: var(--fs-h3);
+    position: absolute;
+    bottom: 0;
+    left: 1.3rem;
+  }
 }
