--- a/style.css
+++ b/style.css
@@ -10,11 +10,73 @@
   aspect-ratio: 1;
 }
 
+.greeting__img-container {
+  width: 90%;
+  margin: 0 auto;
+}
+.greeting h2 {
+  font-size: var(--fs-h2);
+}
+
+.myWork__arrows {
+  display: flex;
+  gap: 5rem;
+  justify-content: center;
+  margin-top: 1rem;
+}
+
 .hero__text {
   text-align: center;
 }
 .hero__text h1 {
   font-size: var(--fs-h1);
+}
+.hero__skills {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(6, 10.5rem);
+  gap: 1rem;
+}
+
+.graphD {
+  grid-column: 1/3;
+  grid-row: 1/3;
+}
+
+.illur {
+  grid-row: 4/5;
+  grid-column: 1/3;
+}
+
+.photo {
+  grid-column: 1/3;
+}
+
+.motionG {
+  grid-column: 1/3;
+}
+
+.skill {
+  color: var(--color-cream);
+  position: relative;
+  border-radius: 0.5rem;
+}
+.skill__svg-container {
+  position: absolute;
+  top: 1rem;
+  right: 1.3rem;
+}
+.skill h3 {
+  font-size: var(--fs-h3);
+  position: absolute;
+  bottom: 0;
+  left: 1.3rem;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
+  gap: 4em;
 }
 
 :root {
@@ -28,6 +90,8 @@
   --color-grey: #7a746e;
   --color-cream: #fff7f0;
   --fs-h1: 1.9rem;
+  --fs-h2: 1.6rem;
+  --fs-h3: 1.4rem;
 }
 
 body {
@@ -47,17 +111,25 @@ svg {
 }
 
 .btn {
-  padding: 0 1.4rem;
+  padding: 0.8rem 1.4rem;
   font-weight: bold;
   border-radius: 1.4rem;
   border: none;
   outline: none;
   cursor: pointer;
+  color: var(--color-cream);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 h1,
 h2 {
   color: var(--color-black);
+}
+
+h3 {
+  color: var(--color-cream);
 }
 
 p {
