--- a/style.scss
+++ b/style.scss
@@ -23,6 +23,12 @@
   --fs-h3: 1.4rem;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Plus Jakarta Sans", sans-serif;
   background-color: var(--color-cream);
