--- a/src/components/Cta/cta.scss
+++ b/src/components/Cta/cta.scss
@@ -8,6 +8,7 @@
   gap: 1.5rem;
   border-radius: 0.4rem;
   padding: 2rem 1.2rem;
+  margin: 0 0 2em 0;
 
   & span {
     color: var(--color-cream);
