--- a/src/components/Hero/hero.scss
+++ b/src/components/Hero/hero.scss
@@ -1,9 +1,11 @@
 .hero {
+  margin: 2em 0 4em 0;
   &__text {
     text-align: center;
 
     & h1 {
       font-size: var(--fs-h1);
+      margin-bottom: 0.75em;
     }
   }
 
@@ -12,6 +14,7 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(6, 10.5rem);
     gap: 1rem;
+    margin-top: 1.75em;
   }
 }
 
