--- a/src/components/MyWork/mywork.scss
+++ b/src/components/MyWork/mywork.scss
@@ -1,8 +1,36 @@
 .myWork {
+  & h2 {
+    text-align: center;
+    margin-bottom: 1.3em;
+  }
+
   &__arrows {
     display: flex;
-    gap: 5rem;
+    gap: 0.75rem;
     justify-content: center;
     margin-top: 1rem;
+  }
+
+  &__arr {
+    background-color: var(--color-black);
+    padding: 1em;
+    border-radius: 100rem;
+    cursor: pointer;
+    margin: 1em 0 4em 0;
+  }
+}
+
+.img {
+  border-radius: 0.6em;
+  max-width: 70vw;
+}
+
+.imageSliderLong {
+  height: clamp(14rem, 50vw, 25rem);
+}
+
+@media (min-width: 950px) {
+  .imageSliderLong {
+    height: clamp(16rem, 30vw, 24rem);
   }
 }
