--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
   gap: 1.5rem;
   border-radius: 0.4rem;
   padding: 2rem 1.2rem;
+  margin: 0 0 2em 0;
 }
 .cta span {
   color: var(--color-cream);
@@ -19,6 +20,7 @@
   display: flex;
   justify-content: space-between;
   height: 6vh;
+  margin: 0.6em 0 0 0;
 }
 .header__logo-container svg {
   height: 100%;
@@ -27,31 +29,71 @@
 }
 
 .greeting__img-container {
-  width: 90%;
+  max-width: 19rem;
   margin: 0 auto;
 }
 .greeting h2 {
   font-size: var(--fs-h2);
 }
+.greeting__text {
+  margin: 2.25em 0 4em 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1.1em;
+}
 
+.btn {
+  align-self: center;
+}
+
+.myWork h2 {
+  text-align: center;
+  margin-bottom: 1.3em;
+}
 .myWork__arrows {
   display: flex;
-  gap: 5rem;
+  gap: 0.75rem;
   justify-content: center;
   margin-top: 1rem;
 }
+.myWork__arr {
+  background-color: var(--color-black);
+  padding: 1em;
+  border-radius: 100rem;
+  cursor: pointer;
+  margin: 1em 0 4em 0;
+}
 
+.img {
+  border-radius: 0.6em;
+  max-width: 70vw;
+}
+
+.imageSliderLong {
+  height: clamp(14rem, 50vw, 25rem);
+}
+
+@media (min-width: 950px) {
+  .imageSliderLong {
+    height: clamp(16rem, 30vw, 24rem);
+  }
+}
+.hero {
+  margin: 2em 0 4em 0;
+}
 .hero__text {
   text-align: center;
 }
 .hero__text h1 {
   font-size: var(--fs-h1);
+  margin-bottom: 0.75em;
 }
 .hero__skills {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(6, 10.5rem);
   gap: 1rem;
+  margin-top: 1.75em;
 }
 
 .graphD {
@@ -89,12 +131,6 @@
   left: 1.3rem;
 }
 
-.app {
-  display: flex;
-  flex-direction: column;
-  gap: 4em;
-}
-
 :root {
   --color-violet-blue: #755cde;
   --color-orange: #f6a560;
@@ -124,7 +160,8 @@ body {
 
 .container {
   width: 95%;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 img,
