--- a/src/components/Greeting/greeting.scss
+++ b/src/components/Greeting/greeting.scss
@@ -13,7 +13,29 @@
     margin: 2.25em 0 4em 0;
     display: flex;
     flex-direction: column;
+    font-size: var(--fs-p);
     gap: 1.1em;
+  }
+
+  @media (min-width: 768px) {
+    display: flex;
+    gap: 3em;
+
+    &__text {
+      flex: 1;
+      padding: 0 1em;
+      max-width: 50%;
+    }
+
+    &__img-container {
+      flex: 1;
+    }
+
+    margin-bottom: 4em;
+
+    .btn {
+      align-self: start;
+    }
   }
 }
 
