--- a/src/components/MyWork/mywork.scss
+++ b/src/components/MyWork/mywork.scss
@@ -2,6 +2,7 @@
   & h2 {
     text-align: center;
     margin-bottom: 1.3em;
+    font-size: var(--fs-h2);
   }
 
   &__arrows {
@@ -17,6 +18,10 @@
     border-radius: 100rem;
     cursor: pointer;
     margin: 1em 0 4em 0;
+
+    @media (min-width: 768px) {
+      padding: 1.5em;
+    }
   }
 }
 
