--- a/style.css
+++ b/style.css
@@ -11,6 +11,14 @@
   padding: 2rem 1.2rem;
   margin: 0 0 2em 0;
 }
+@media (min-width: 768px) {
+  .cta {
+    padding: 3.3em 4.9em;
+  }
+}
+.cta h3 {
+  font-size: var(--fs-h3);
+}
 .cta span {
   color: var(--color-cream);
   font-size: var(--fs-p);
@@ -21,6 +29,11 @@
   justify-content: space-between;
   height: 6vh;
   margin: 0.6em 0 0 0;
+}
+@media (min-width: 768px) {
+  .header {
+    height: 7vh;
+  }
 }
 .header__logo-container svg {
   height: 100%;
@@ -39,7 +52,26 @@
   margin: 2.25em 0 4em 0;
   display: flex;
   flex-direction: column;
+  font-size: var(--fs-p);
   gap: 1.1em;
+}
+@media (min-width: 768px) {
+  .greeting {
+    display: flex;
+    gap: 3em;
+    margin-bottom: 4em;
+  }
+  .greeting__text {
+    flex: 1;
+    padding: 0 1em;
+    max-width: 50%;
+  }
+  .greeting__img-container {
+    flex: 1;
+  }
+  .greeting .btn {
+    align-self: start;
+  }
 }
 
 .btn {
@@ -49,6 +81,7 @@
 .myWork h2 {
   text-align: center;
   margin-bottom: 1.3em;
+  font-size: var(--fs-h2);
 }
 .myWork__arrows {
   display: flex;
@@ -62,6 +95,11 @@
   border-radius: 100rem;
   cursor: pointer;
   margin: 1em 0 4em 0;
+}
+@media (min-width: 768px) {
+  .myWork__arr {
+    padding: 1.5em;
+  }
 }
 
 .img {
@@ -88,12 +126,26 @@
   font-size: var(--fs-h1);
   margin-bottom: 0.75em;
 }
+@media (min-width: 768px) {
+  .hero .hero__text p {
+    width: 50ch;
+    margin: 0 auto;
+    font-size: var(--fs-p);
+  }
+}
 .hero__skills {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(6, 10.5rem);
   gap: 1rem;
   margin-top: 1.75em;
+}
+@media (min-width: 768px) {
+  .hero__skills {
+    margin-top: 3.5em;
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-rows: repeat(3, 11rem);
+  }
 }
 
 .graphD {
@@ -114,6 +166,24 @@
   grid-column: 1/3;
 }
 
+@media (min-width: 768px) {
+  .graphD {
+    grid-column: 1/2;
+    grid-row: 1/3;
+  }
+  .illur {
+    grid-row: 2/3;
+    grid-column: 2/4;
+  }
+  .photo {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
+  .motionG {
+    grid-column: 2/-1;
+    grid-row: 3/4;
+  }
+}
 .skill {
   color: var(--color-cream);
   position: relative;
@@ -129,6 +199,11 @@
   position: absolute;
   bottom: 0;
   left: 1.3rem;
+}
+@media (min-width: 768px) {
+  .skill h3 {
+    bottom: 1rem;
+  }
 }
 
 :root {
@@ -146,6 +221,15 @@
   --fs-h3: 1.4rem;
   --fs-p: 0.9rem;
 }
+@media (min-width: 768px) {
+  :root {
+    --fs-h1: 2.8rem;
+    --fs-h2: 1.9rem;
+    --fs-h3: 1.8rem;
+    --fs-p: 1.1rem;
+    --fs-btn: 1rem;
+  }
+}
 
 * {
   margin: 0;
@@ -162,6 +246,11 @@ body {
   width: 95%;
   margin-left: auto;
   margin-right: auto;
+}
+@media (min-width: 768px) {
+  .container {
+    width: 90%;
+  }
 }
 
 img,
@@ -181,8 +270,18 @@ svg {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: var(--fs-btn);
 }
 
+@media (min-width: 768px) {
+  .header {
+    height: 7vh;
+  }
+  .btn {
+    padding: 1.2em 2.3em;
+    border-radius: 2.2rem;
+  }
+}
 h1,
 h2 {
   color: var(--color-black);
