--- a/src/components/Hero/hero.scss
+++ b/src/components/Hero/hero.scss
@@ -15,6 +15,12 @@
       margin: 0 auto;
       font-size: var(--fs-p);
     }
+
+    @media (min-width: 1024px) {
+      .hero__text p {
+        width: 55ch;
+      }
+    }
   }
 
   &__skills {
@@ -27,6 +33,12 @@
       margin-top: 3.5em;
       grid-template-columns: 2fr 1fr 1fr;
       grid-template-rows: repeat(3, 11rem);
+    }
+
+    @media (min-width: 1024px) {
+      margin-top: 3.5em;
+      grid-template-columns: 2fr 1fr 1fr 2fr;
+      grid-template-rows: repeat(2, 11rem);
     }
   }
 }
@@ -68,6 +80,28 @@
   .motionG {
     grid-column: 2/-1;
     grid-row: 3/4;
+  }
+}
+
+@media (min-width: 1024px) {
+  .graphD {
+    grid-column: 1/2;
+    grid-row: 1/3;
+  }
+
+  .illur {
+    grid-row: 2/3;
+    grid-column: 2/4;
+  }
+
+  .photo {
+    grid-column: 4/5;
+    grid-row: 1/2;
+  }
+
+  .motionG {
+    grid-column: 4/5;
+    grid-row: 2/3;
   }
 }
 
