--- a/src/components/MyWork/mywork.scss
+++ b/src/components/MyWork/mywork.scss
@@ -18,6 +18,7 @@
     border-radius: 100rem;
     cursor: pointer;
     margin: 1em 0 4em 0;
+    user-select: none;
 
     @media (min-width: 768px) {
       padding: 1.5em;
