--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@
   padding: 2rem 1.2rem;
   margin: 0 0 2em 0;
 }
+.cta__text {
+  display: flex;
+  gap: 1.5rem;
+  flex-direction: column;
+}
 @media (min-width: 768px) {
   .cta {
     padding: 3.3em 4.9em;
@@ -22,6 +27,17 @@
 .cta span {
   color: var(--color-cream);
   font-size: var(--fs-p);
+}
+@media (min-width: 1024px) {
+  .cta {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 5em 5.5em 5em 4em;
+  }
+  .cta__text {
+    text-align: left;
+    width: 45ch;
+  }
 }
 
 .header {
@@ -43,7 +59,6 @@
 
 .greeting__img-container {
   max-width: 19rem;
-  margin: 0 auto;
 }
 .greeting h2 {
   font-size: var(--fs-h2);
@@ -58,19 +73,33 @@
 @media (min-width: 768px) {
   .greeting {
     display: flex;
+    align-items: center;
     gap: 3em;
     margin-bottom: 4em;
   }
   .greeting__text {
-    flex: 1;
     padding: 0 1em;
-    max-width: 50%;
+    flex: 0 0 50%;
   }
   .greeting__img-container {
     flex: 1;
+    margin-right: auto;
+    min-width: 45%;
   }
   .greeting .btn {
     align-self: start;
+  }
+}
+@media (min-width: 1024px) {
+  .greeting {
+    justify-content: space-between;
+  }
+  .greeting__img-container {
+    flex: 0 0 40%;
+    min-width: 40%;
+  }
+  .greeting__text {
+    margin-left: auto;
   }
 }
 
@@ -95,6 +124,7 @@
   border-radius: 100rem;
   cursor: pointer;
   margin: 1em 0 4em 0;
+  user-select: none;
 }
 @media (min-width: 768px) {
   .myWork__arr {
@@ -133,6 +163,11 @@
     font-size: var(--fs-p);
   }
 }
+@media (min-width: 768px) and (min-width: 1024px) {
+  .hero .hero__text p {
+    width: 55ch;
+  }
+}
 .hero__skills {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -145,6 +180,13 @@
     margin-top: 3.5em;
     grid-template-columns: 2fr 1fr 1fr;
     grid-template-rows: repeat(3, 11rem);
+  }
+}
+@media (min-width: 1024px) {
+  .hero__skills {
+    margin-top: 3.5em;
+    grid-template-columns: 2fr 1fr 1fr 2fr;
+    grid-template-rows: repeat(2, 11rem);
   }
 }
 
@@ -182,6 +224,24 @@
   .motionG {
     grid-column: 2/-1;
     grid-row: 3/4;
+  }
+}
+@media (min-width: 1024px) {
+  .graphD {
+    grid-column: 1/2;
+    grid-row: 1/3;
+  }
+  .illur {
+    grid-row: 2/3;
+    grid-column: 2/4;
+  }
+  .photo {
+    grid-column: 4/5;
+    grid-row: 1/2;
+  }
+  .motionG {
+    grid-column: 4/5;
+    grid-row: 2/3;
   }
 }
 .skill {
@@ -252,6 +312,11 @@ body {
     width: 90%;
   }
 }
+@media (min-width: 1024px) {
+  .container {
+    width: 80%;
+  }
+}
 
 img,
 svg {
@@ -271,6 +336,7 @@ svg {
   justify-content: center;
   align-items: center;
   font-size: var(--fs-btn);
+  user-select: none;
 }
 
 @media (min-width: 768px) {
